--- a/.github/workflows/keep-repo-active.yml
+++ b/.github/workflows/keep-repo-active.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
+        with:
+          ref: automation
       - name: Create empty commit
         run: |
           git config --local user.email "${COMMITER_EMAIL}"
