--- a/.github/workflows/keep-repo-active.yml
+++ b/.github/workflows/keep-repo-active.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   empty_commit:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
