fix: use absolute path to run the mirroring script

--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -49,5 +49,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}_hg-repository_${{ steps.cache_date.outputs.YEAR }}_${{ steps.cache_date.outputs.MONTH }}_
       - name: Update mirror
-        run: bash ./mirror-hg-to-git.sh 'https://hg.mozilla.org/l10n-central/cs/' 'https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git'
+        run: bash '${{ github.workspace }}/mirror-hg-to-git.sh' 'https://hg.mozilla.org/l10n-central/cs/' 'https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git'
         working-directory: github_l10n-mozilla-central-cs
