--- a/.github/workflows/update-mirror.yml
+++ b/.github/workflows/update-mirror.yml
@@ -9,6 +9,10 @@ on:
     - cron: '42 */3 * * *'
   workflow_dispatch: # allows to be run manually
 
+# Allow one concurrent release
+concurrency:
+  group: "default-branch-push"
+
 env:
   SOURGE_HG_REPO_URL: https://hg.mozilla.org/l10n-central/cs/
   SOURCE_HG_REPO_PATH: source_hg_repo
@@ -16,6 +20,7 @@ env:
 jobs:
   update:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
